objects/MPW_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Finish_Date__c</fullName>
        <label>Effective Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FormNotes</fullName>
                </value>
                <value>
                    <fullName>ScheduleNotes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>MPW Notes</label>
    <listViews>
        <fullName>All_Notes</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_Finish_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Notes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FormNotes</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_Finish_Date__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>FormNotes</value>
        </filters>
        <label>FormNotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ScheduleNotes</fullName>
        <columns>NAME</columns>
        <columns>Sequence_No__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <columns>Effective_Start_Date__c</columns>
        <columns>Effective_Finish_Date__c</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ScheduleNotes</value>
        </filters>
        <label>ScheduleNotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MPWN-{0000000000}</displayFormat>
        <label>MPW Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>